# simsalabim

./: .gitignore  CHANGELOG  README.md  README.rst  pyproject.toml  setup.py
admin/: release_checklist.txt
simsalabim/: add_quant_info.py  apl_parser.py  apl_writer.py  convert.py  digest.py  dinosaur_adapter.py  dinosaur_batch.py  extract_precursor_peak.py  extract_spectra.py  helpers.py  mgf_parser.py  mgf_writer.py  ms2_parser.py  ms2_writer.py  mzml_parser.py  mzml_writer.py  precursor.py  simsalabim.py  spectrum.py  split_apl.py  transform.py
simsalabim/test/: test_digest.py  test_helpers.py
