[tool.poetry]
name = "simsalabim"
version = "0.2.0"
description = ""
authors = ["Matthew The <matthew.the@tum.de>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
psims = "^1.0.1"
numpy = "^1.23.1"
pyteomics = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
